--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -24,7 +24,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Authenticator</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-size: 15px;
+        line-height: 1.5em;
+        font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
+          'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+          'Helvetica Neue', sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      code {
+        font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+          monospace;
+      }
+      #root {
+        flex-grow: 1;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
