--- a/packages/theme/.storybook/preview-head.html
+++ b/packages/theme/.storybook/preview-head.html
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     font-size: 15px;
+    line-height: 1.5em;
     font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
