--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>Authenticator</title>
     <link
+      href="https://fonts.googleapis.com/css?family=Inconsolata:700|Rubik:500&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Rubik:500"
     />
     <link
       rel="stylesheet"
@@ -41,6 +41,7 @@
         padding: 0;
         font-size: 15px;
         line-height: 1.5em;
+        background: #222222;
         font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
           'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
           'Helvetica Neue', sans-serif;
