began work on the gadgets repo

--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -25,12 +25,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Authenticator</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Inconsolata:700|Rubik:500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <style>
       body {
         margin: 0;
         padding: 0;
         font-size: 15px;
         line-height: 1.5em;
+        background: #222222;
         font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
           'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
           'Helvetica Neue', sans-serif;
@@ -49,6 +60,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="portals"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
