--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -41,7 +41,7 @@
         padding: 0;
         font-size: 15px;
         line-height: 1.5em;
-        background: #222222;
+        background: transparent;
         font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
           'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
           'Helvetica Neue', sans-serif;
