--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -35,6 +35,7 @@
         padding: 0;
         font-size: 15px;
         line-height: 1.5em;
+        letter-spacing: 0.005em;
         background: #222222;
         font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
           'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
