updated the readmes

--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Authentication that dominates in performance and usability"
+      content="User and team management for your app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
