--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -25,21 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Authenticator</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Inconsolata:700|Rubik:500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:500">
     <style>
       body {
         margin: 0;
         padding: 0;
         font-size: 15px;
-        line-height: 1.5em;
-        letter-spacing: 0.005em;
-        background: #222222;
-        font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
-          'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-          'Helvetica Neue', sans-serif;
+        line-height: 1.25em;
+        font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
+          'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+          sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
@@ -48,7 +43,11 @@
           monospace;
       }
       #root {
+        display: flex;
+        flex-direction: column;
         flex-grow: 1;
+        min-height: 100vh;
+        background: #3B3B3B;
       }
     </style>
   </head>
