--- a/packages/wga-theme/.storybook/preview-head.html
+++ b/packages/wga-theme/.storybook/preview-head.html
@@ -1,5 +1,4 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:500">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <style>
   body {
     margin: 0;
@@ -17,8 +16,10 @@
       monospace;
   }
   #root {
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
-    background: #3B3B3B;
     min-height: 100vh;
+    background: #3B3B3B;
   }
 </style>
