--- a/packages/wga-theme/.storybook/preview-head.html
+++ b/packages/wga-theme/.storybook/preview-head.html
@@ -1,11 +1,13 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:500">
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:500"> -->
+<link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
 <style>
   body {
     margin: 0;
     padding: 0;
     font-size: 15px;
     line-height: 1.25em;
-    font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
+    font-weight: 800;
+    font-family: 'futura-pt', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
