--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -47,7 +47,7 @@
         flex-direction: column;
         flex-grow: 1;
         min-height: 100vh;
-        background: #3B3B3B;
+        background: #1A1A1A;
       }
     </style>
   </head>
