got the gadgets to appear in admin

--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -47,7 +47,7 @@
         flex-direction: column;
         flex-grow: 1;
         min-height: 100vh;
-        background: #1A1A1A;
+        background: transparent;
       }
     </style>
   </head>
