--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -25,14 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Authenticator</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:500">
+    <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
     <style>
       body {
         margin: 0;
         padding: 0;
         font-size: 15px;
+        font-weight: 700;
         line-height: 1.25em;
-        font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
+        font-family: 'futura-pt', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
           'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
           sans-serif;
         -webkit-font-smoothing: antialiased;
