--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -27,28 +27,32 @@
     <title>Authenticator</title>
     <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
     <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-size: 15px;
-        font-weight: 700;
+      html {
+        font-size: 16px;
         line-height: 1.25em;
+        font-weight: 700;
         font-family: 'futura-pt', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
           'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
           sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        overflow: hidden;
+      }
       code {
-        font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
           monospace;
       }
       #root {
         display: flex;
         flex-direction: column;
         flex-grow: 1;
-        min-height: 100vh;
-        background: transparent;
+        height: 100vh;
+        overflow: auto;
       }
     </style>
   </head>
