--- a/packages/wga-theme/.storybook/preview-head.html
+++ b/packages/wga-theme/.storybook/preview-head.html
@@ -1,9 +1,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
+  html {
+    font-size: 16px;
     line-height: 1.25em;
     font-weight: 700;
     font-family: 'futura-pt', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,15 +10,22 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden;
+    background: #1A1A1A;
+  }
   code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
       monospace;
   }
   #root {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    min-height: 100vh;
-    background: #1A1A1A;
+    height: 100vh;
+    overflow: auto;
   }
 </style>
