--- a/packages/admin/.storybook/preview-head.html
+++ b/packages/admin/.storybook/preview-head.html
@@ -1,22 +1,31 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:500">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
-    line-height: 1.5em;
-    font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
+  html {
+    font-size: 16px;
+    line-height: 1.25em;
+    font-weight: 700;
+    font-family: 'futura-pt', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+  body {
+    margin: 0;
+    padding: 0;
+    background: #1A1A1A;
+    height: 100vh;
+    overflow: hidden;
+  }
   code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
       monospace;
   }
   #root {
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
+    height: 100vh;
+    overflow: auto;
   }
 </style>
