connected themes to api

--- a/packages/admin/.storybook/preview-head.html
+++ b/packages/admin/.storybook/preview-head.html
@@ -13,7 +13,7 @@
   body {
     margin: 0;
     padding: 0;
-    background: #1A1A1A;
+    background: #000000;
     height: 100vh;
     overflow: hidden;
   }
