--- a/packages/wga-theme/.storybook/preview-head.html
+++ b/packages/wga-theme/.storybook/preview-head.html
@@ -15,7 +15,7 @@
     padding: 0;
     height: 100vh;
     overflow: hidden;
-    background: #1A1A1A;
+    background: #000000;
   }
   code {
     font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
