added menu dropdown to snippets

--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -40,7 +40,7 @@
       body {
         margin: 0;
         padding: 0;
-        background: #000000;
+        background: hsl(0, 0%, 2.5%);
         height: 100vh;
         overflow: hidden;
       }
