--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Authenticator</title>
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
     <style>
       html {
