--- a/packages/wga-theme/.storybook/preview-head.html
+++ b/packages/wga-theme/.storybook/preview-head.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
 <style>
   html {
