--- a/packages/wga-theme/.storybook/preview-head.html
+++ b/packages/wga-theme/.storybook/preview-head.html
@@ -1,11 +1,11 @@
 <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css">
+<link href="https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap" rel="stylesheet">
+<!-- <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css"> -->
 <style>
   html {
     font-size: 16px;
     line-height: 1.25em;
-    font-weight: 700;
-    font-family: 'futura-pt', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Rubik', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
