--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Authenticator</title>
+    <title>Authpack</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css"> -->
