--- a/packages/gadgets/public/index.html
+++ b/packages/gadgets/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#111111" />
     <meta
       name="description"
-      content="User and team management for your app"
+      content="Simple user and team management API for your app"
     />
     <link rel="apple-touch-icon" href="assets/bolt.png" />
     <!--
