--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Simple user and team management API for your app"
     />
-    <link rel="apple-touch-icon" href="assets/bolt.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/bolt.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
