updated the plugin scripts

--- a/packages/scripts/src/home.html
+++ b/packages/scripts/src/home.html
@@ -7,7 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <button data-authpack="show">Login</button>
+    <button data-authpack="plugin">Login</button>
     <a href="/index.html">Go to index</a>
     <script
       src="index.js"
