improved all script tags

--- a/packages/scripts/src/home.html
+++ b/packages/scripts/src/home.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      data-authpack="guard"
+      data-redirect="/index.html"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- inject authpack -->
     <script
@@ -20,6 +24,6 @@
     <br />
     <br />
     <!-- login and access account -->
-    <button data-authpack="plugin">Login</button>
+    <button data-authpack="plugin">Account</button>
   </body>
 </html>
