change plugin to open

--- a/packages/scripts/src/home.html
+++ b/packages/scripts/src/home.html
@@ -24,6 +24,6 @@
     <br />
     <br />
     <!-- login and access account -->
-    <button data-authpack="plugin">Account</button>
+    <button data-authpack="open">Account</button>
   </body>
 </html>
