--- a/packages/scripts/src/index.html
+++ b/packages/scripts/src/index.html
@@ -26,7 +26,7 @@
     <a href="/home.html">Home</a>
     <br />
     <br />
-    <button data-authpack="plugin">Account</button>
+    <button data-authpack="open">Account</button>
     <br />
     <br />
     <!-- replace text with state data -->
