--- a/packages/scripts/src/home.html
+++ b/packages/scripts/src/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
+    <!-- <meta
       data-authpack="guard"
       data-redirect="/index.html"
-    />
+    /> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- inject authpack -->
     <script
