--- a/packages/theme/.storybook/preview-head.html
+++ b/packages/theme/.storybook/preview-head.html
@@ -1,12 +1,15 @@
-<link href="https://fonts.googleapis.com/css?family=Inconsolata:700&display=swap" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css?family=Inconsolata:700&display=swap"
+  rel="stylesheet"
+/>
 <!-- <link rel="stylesheet" href="https://use.typekit.net/xzq3xtm.css"> -->
 <style>
   html {
     font-size: 16px;
     line-height: 1.25em;
-    font-family: 'Inter', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
+    font-family: 'sans-serif', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
+      'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+      'Helvetica Neue', 'sans-serif';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
