--- a/packages/theme/.storybook/preview-head.html
+++ b/packages/theme/.storybook/preview-head.html
@@ -7,8 +7,8 @@
   html {
     font-size: 16px;
     line-height: 1.25em;
-    font-family: 'sans-serif', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
-      'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
+      'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
       'Helvetica Neue', 'sans-serif';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
