prompting plans now works

--- a/packages/scripts/src/index.html
+++ b/packages/scripts/src/index.html
@@ -14,7 +14,7 @@
     <!-- inject authpack -->
     <script
       src="index.js"
-      data-key="wga-client-key-85068bfcfc17da6c9ff1d5f66"
+      data-key="wga-client-key-109e31db9bcdebd9dbc5e4e4c"
       data-url="http://localhost:3100"
       data-gql="http://localhost:4000"
       data-debug="true"
@@ -26,7 +26,7 @@
     <a href="/home.html">Home</a>
     <br />
     <br />
-    <button data-authpack="open" data-prompt="premium">Account</button>
+    <button data-authpack="open" data-prompt="plan_GWbzr3DQAEGuIP">Account</button>
     <br />
     <br />
     <!-- replace text with state data -->
