--- a/packages/scripts/src/index.html
+++ b/packages/scripts/src/index.html
@@ -32,17 +32,17 @@
     <!-- replace text with state data -->
     <div data-authpack="replace" data-value="user.name"></div>
     <!-- show an item once logged in -->
-    <div data-authpack="show" data-value="user" data-trigger="present">
+    <div data-authpack="show" data-value="user">
       User is authenticated
     </div>
-    <div data-authpack="show" data-value="team" data-trigger="present">
+    <div data-authpack="show" data-value="team">
       User has a team
     </div>
     <!-- hide an item with conditions -->
-    <div data-authpack="hide" data-value="user" data-trigger="present">
+    <div data-authpack="hide" data-value="user">
       User is not present
     </div>
-    <div data-authpack="hide" data-value="team" data-trigger="present">
+    <div data-authpack="hide" data-value="team">
       User does not have a team
     </div>
   </body>
